@@ -36,8 +36,6 @@ export default class MenheraClient extends Client {
 
   public economyUsages: Set<string>;
 
-  public roleplayUsages: Collection<string, number>;
-
   public jogoDoBichoManager!: JogoDoBixoManager;
 
   public shuttingDown: boolean;
@@ -59,7 +57,6 @@ export default class MenheraClient extends Client {
     );
     this.slashCommands = new Collection();
     this.cooldowns = new Collection();
-    this.roleplayUsages = new Collection();
     this.economyUsages = new Set();
     this.events = new EventManager(this);
     this.config = config;
