@@ -15,9 +15,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
   - `/arena batalhar` - Chama um jogador para 1x1. Nada vale aqui, os valores de vida e mana serão todos resetados, e ninguém perderá vida fora da Arena.
 - Comandos de ação agora aceitam motivos. Diga para a Menhera o porquê de tu estar tomando aquela ação, e ela mostrará pra todos isso
 - O cooldown da dungeon agora aparece no `/cooldowns`
-- Novos comandos para imagens de usuários: 
+- Novos comandos para imagens de usuários:
   - `/user banner` Mostra o banner de um usuário (se ele tiver)
   - `/user avatar` Mostra o avatar de um usuário (pode ser o avatar customizado de servidor)
+- A Roleta agora tem um limite de apostas altas. Você só pode fazer 5 apostas altas em `Número Único` e `Dupla de Números` por hora. São consideiradas apostas altas àquelas maiores de 10000 estrelinhas.
+- Os retornos das apostas agora são reduzidos por impostos. Quanto maior seu retorno, maiores os impostos (governo é ladrão, fazer o que).
 
 ### Changed
 
@@ -28,6 +30,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - A seleção de bênçãos no componente foi limitada para 15, já que não faz sentido ter 25 pois nem da pra selecionar algo maior que 15
 - O Comando `/give` foi renomeado para `/presentear`
 - O Comando `/meme fodase` foi renomeado para `/meme fds`
+- Limite de apostas da Roleta foi aumentado de `15_000` para `100_000` estrelinhas
 
 ### Fixed
 
